--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding-top: 800px;
     background-color: chartreuse;
+    text-align: center;
 }
 
 #welcome {
@@ -81,7 +82,6 @@ p {
 }
 .links{
     float: left;
-    color:  darkred;
     padding-bottom: 5px;
     padding-top: 5px;
     padding-left: 9px;
@@ -91,4 +91,13 @@ p {
 }
 .links:hover{
     background-color: mediumblue;
+}
+a{
+    text-decoration: none;
+}
+a:hover{
+    color:forestgreen;
+}
+html{
+    scroll-behavior: smooth;
 }
